--- a/Dockerfile.armv7
+++ b/Dockerfile.armv7
@@ -3,7 +3,8 @@ FROM arm32v7/debian:stretch
 ENV SQUEAK_VERSION=5.2
 ENV SQUEAK_IMAGE=Squeak$SQUEAK_VERSION-18229-32bit
 ENV SQUEAK_RELEASE=$SQUEAK_IMAGE-201810190412-ARMv6
-ENV SQUEAK_IMAGE_LOCATION=/squeak/shared/$SQUEAK_IMAGE.image
+ENV SQUEAK_IMAGE_LOCATION=$SQUEAK_HOME/shared/$SQUEAK_IMAGE.image
+ENV SQUEAK_HOME=/squeak
 ENV SQUEAK_START_SCRIPT=''
 
 WORKDIR $SQUEAK_HOME
